--- a/content/blog-update.mdx
+++ b/content/blog-update.mdx
@@ -22,9 +22,9 @@ I started from scratch with simplicity in mind. Let's go through the decision ma
 - **Introducing a View Counter using Redis (Upstash)**: A fun, non-intrusive way to keep track of engagement.
 
 ## App router
-Wit the paradigm shift of the Next.Js team to the app router it was a no-brainer. I have to be honest here: At [Antartida](https://antartida.io) we were early adopters of the app router and we had to deal with some performance and compatibility issues at first. I'm glad the Next.Js team has focused so much in fixing those issues in following releases and now it's the way to go.
+Wit the paradigm shift of the Next.Js team to the app router it was a no-brainer. I have to be honest here: At [Antartida](https://antartida.ai) we were early adopters of the app router and we had to deal with some performance and compatibility issues at first. I'm glad the Next.Js team has focused so much in fixing those issues in following releases and now it's the way to go.
 
-The Next team's shift towards the app router was a big paradigm shift. At [Antartida](https://antartida.io), we were early adopters, initially facing some performance and compatibility challenges. However, the Next team's dedication to improvement made it an essential part of our toolkit.
+The Next team's shift towards the app router was a big paradigm shift. At [Antartida](https://antartida.ai), we were early adopters, initially facing some performance and compatibility challenges. However, the Next team's dedication to improvement made it an essential part of our toolkit.
 
 ## Simplifying with next-mdx-remote
 Aiming for simplicity, I decided to eliminate third-party services. This also allows me to include more dynamic content in the future.
