--- a/content/posts/tanstack-start-dynamic-og-images.mdx
+++ b/content/posts/tanstack-start-dynamic-og-images.mdx
@@ -4,7 +4,7 @@ summary: "Creating dynamic OG images with TanStack Start a-la vercel/og."
 publishedAt: "2025-10-12"
 ---
 
-# You don't need TRPC for Type-Safe APIs
+# Dynamic OG Images with TanStack Start
 
 When we started building our product, we knew one thing for sure: we didn't want to play the guessing game between backend and frontend.
 
